--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "devDependencies": {
     "esbuild": "0.24.0",
+    "fluid-tailwind": "^1.0.3",
     "npm-run-all": "^4.1.5",
     "tailwindcss": "^3.4.14"
   }
